```mermaid
erDiagram

    Test1 {
        int pk11 PK
        int pk12 PK
    }

    Test2 {
        int pk21 PK
    }

    Test3 {
        int pk31 PK
        int pk11 PK, FK
        int pk12 PK, FK
    }

    Test4 {
        int pk41 PK
    }

    Test2 }o--|| Test1 : "Test2_Test1"
    Test3 }o--|| Test1 : "Test3_Test1"
    Test1 }o--o{ Test4 : "Test1_Test4"
```